# hugging-face-agents-course-practice

./: README.md  main.py  pyproject.toml
src/: smolagents_practice.py  weather.py
